log

Wed 16 Aug 2023 12:26:54 AM UTC: 
 exercises.c | 78 ++++++++++++++++++++++++++++++++++++++++++++++++++++++-------
 1 file changed, 69 insertions(+), 9 deletions(-)
 tests:  0|5
total_score: 20/70
bbaeb25
Wed 16 Aug 2023 12:30:08 AM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:34:25: error: expected ‘;’ before ‘:’ token
   34 |     printf("%d ",arr[i]):
      |                         ^
      |                         ;
Compilation failed
c57a9ee
Wed 16 Aug 2023 12:30:22 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
4c31b20
Wed 16 Aug 2023 12:33:57 AM UTC: 
 exercises.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  0|5
total_score: 20/70
5709582
Wed 16 Aug 2023 12:34:59 AM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|5
total_score: 20/70
97c7dfe
Wed 16 Aug 2023 12:35:45 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:38:22: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   38 |   for(int i=size-1 ; i=0 ; i--){
      |                      ^
cc1: all warnings being treated as errors
Compilation failed
4f05337
Wed 16 Aug 2023 12:35:52 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
610e02e
Wed 16 Aug 2023 12:36:33 AM UTC: 
 exercises.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  0|5
total_score: 20/70
2bd0398
Wed 16 Aug 2023 12:41:00 AM UTC: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|4
total_score: 30/70
362ba1d
Wed 16 Aug 2023 02:02:10 PM UTC: 
 exercises.c | 27 +++++++++++++++++++++++++++
 1 file changed, 27 insertions(+)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:81:3: error: implicit declaration of function ‘mergeSort’ [-Werror=implicit-function-declaration]
   81 |   mergeSort(arr1, 0, tamaño1 - 1);
      |   ^~~~~~~~~
exercises.c:81:22: error: ‘tamaño1’ undeclared (first use in this function)
   81 |   mergeSort(arr1, 0, tamaño1 - 1);
      |                      ^~~~~~~
exercises.c:81:22: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:82:24: error: ‘tamaño2’ undeclared (first use in this function)
   82 |     mergeSort(arr2, 0, tamaño2 - 1);
      |                        ^~~~~~~
exercises.c: At top level:
exercises.c:110:1: error: expected identifier or ‘(’ before ‘}’ token
  110 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5d4ed64
Wed 16 Aug 2023 02:03:55 PM UTC: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:81:3: error: implicit declaration of function ‘mergeSort’ [-Werror=implicit-function-declaration]
   81 |   mergeSort(arr1, 0, size1 - 1);
      |   ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a7fe953
Wed 16 Aug 2023 02:05:49 PM UTC: 
 exercises.c | 18 +++++-------------
 1 file changed, 5 insertions(+), 13 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:83:33: error: ‘tamaño1’ undeclared (first use in this function)
   83 |   for (i = 0, j = 0, k = 0; i < tamaño1 && j < tamaño2; k++) {
      |                                 ^~~~~~~
exercises.c:83:33: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:83:49: error: ‘tamaño2’ undeclared (first use in this function)
   83 |   for (i = 0, j = 0, k = 0; i < tamaño1 && j < tamaño2; k++) {
      |                                                ^~~~~~~
exercises.c:85:11: error: ‘resultado’ undeclared (first use in this function); did you mean ‘result’?
   85 |           resultado[k] = arr1[i];
      |           ^~~~~~~~~
      |           result
Compilation failed
295f845
Wed 16 Aug 2023 02:05:59 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:83:33: error: ‘tamaño1’ undeclared (first use in this function)
   83 |   for (i = 0, j = 0, k = 0; i < tamaño1 && j < tamaño2; k++) {
      |                                 ^~~~~~~
exercises.c:83:33: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:83:49: error: ‘tamaño2’ undeclared (first use in this function)
   83 |   for (i = 0, j = 0, k = 0; i < tamaño1 && j < tamaño2; k++) {
      |                                                ^~~~~~~
Compilation failed
ef12421
Wed 16 Aug 2023 02:06:07 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:83:33: error: ‘size’ undeclared (first use in this function); did you mean ‘size2’?
   83 |   for (i = 0, j = 0, k = 0; i < size && j < size2; k++) {
      |                                 ^~~~
      |                                 size2
exercises.c:83:33: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
e8eabd4
Wed 16 Aug 2023 02:06:21 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
674fa0c
Wed 16 Aug 2023 02:15:14 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
72c69ff
Wed 16 Aug 2023 02:17:44 PM UTC: 
 exercises.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:82:19: error: expected identifier or ‘(’ before ‘int’
   82 |   for (int i = 0, int j = 0,int k = 0; i < size1 && j < size2; k++) {
      |                   ^~~
exercises.c:82:53: error: ‘j’ undeclared (first use in this function)
   82 |   for (int i = 0, int j = 0,int k = 0; i < size1 && j < size2; k++) {
      |                                                     ^
exercises.c:82:53: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:82:64: error: ‘k’ undeclared (first use in this function)
   82 |   for (int i = 0, int j = 0,int k = 0; i < size1 && j < size2; k++) {
      |                                                                ^
Compilation failed
ae1d08d
Wed 16 Aug 2023 02:18:48 PM UTC: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|3
total_score: 40/70
dcce4c9
